--- a/Reproductor v0.0/servidor/Makefile
+++ b/Reproductor v0.0/servidor/Makefile
@@ -1,5 +1,5 @@
 CC	= g++ -std=c++11 -Wall -L/usr/local/lib -I/usr/local/include
-LDFLAGS = -lzmqpp -lzmq -lsfml-audio -pthread
+LDFLAGS = -lzmqpp -lzmq -lsfml-audio -lpthread
 
 all: servidor
 
