Player Fixed, send songs by parts

--- a/Reproductor v0.0/servidor/Makefile
+++ b/Reproductor v0.0/servidor/Makefile
@@ -1,9 +1,8 @@
 CC	= g++ -std=c++11 -Wall -L/usr/local/lib -I/usr/local/include
-LDFLAGS = -lzmqpp -lzmq -lsfml-audio -lpthread
+LDFLAGS = -lzmqpp -lzmq -lsfml-audio -pthread
 
 all: servidor
 
 servidor: servidor.cpp
 	$(CC) -o servidor servidor.cpp $(LDFLAGS)
-
 
